experimental/ir/testdata/options/missing.proto.stderr.txt
error: cannot find message field `unknown` in `google.protobuf.FileOptions`
  --> testdata/options/missing.proto:5:8
   |
 5 | option unknown = 42;
   |        ^^^^^^^ because of this field selector

error: expected singular message, found scalar type `string`
   --> testdata/options/missing.proto:6:19
    |
  6 | option go_package.x = 42;
    |        ---------- ^ field selector requires singular message
    |         |
    |         found scalar type `string`
    |
   ::: <built-in>/google/protobuf/descriptor.proto:510:12
    |
510 |   optional string go_package = 11;
    |            ------ type specified here

error: cannot find message field `unknown` in `google.protobuf.MessageOptions`
  --> testdata/options/missing.proto:9:12
   |
 9 |     option unknown = 42;
   |            ^^^^^^^ because of this field selector

error: expected singular message, found scalar type `bool`
   --> testdata/options/missing.proto:10:23
    |
 10 |     option deprecated.x = 42;
    |            ---------- ^ field selector requires singular message
    |             |
    |             found scalar type `bool`
    |
   ::: <built-in>/google/protobuf/descriptor.proto:617:12
    |
617 |   optional bool deprecated = 3 [default = false];
    |            ---- type specified here

error: cannot find message field `unknown` in `google.protobuf.FieldOptions`
  --> testdata/options/missing.proto:11:27
   |
11 |     optional Foo foo = 1 [unknown = 42, lazy.x = 42];
   |                           ^^^^^^^ because of this field selector

error: expected singular message, found scalar type `bool`
   --> testdata/options/missing.proto:11:46
    |
 11 |     optional Foo foo = 1 [unknown = 42, lazy.x = 42];
    |                                         ---- ^
    |                                          |   |
    |                                          found scalar type `bool`
    |                                              |
    |                                              field selector requires singular message
    |
   ::: <built-in>/google/protobuf/descriptor.proto:749:12
    |
749 |   optional bool lazy = 5 [default = false];
    |            ---- type specified here

error: expected singular message, found scalar type `int32`
  --> testdata/options/missing.proto:12:37
   |
12 |     optional int32 bar = 2 [default.x = 42];
   |              -----          ------- ^
   |               |                     |
   |               type specified here   field selector requires singular message
   |                              |
   |                              found scalar type `int32`

error: cannot find message field `unknown` in `google.protobuf.OneofOptions`
  --> testdata/options/missing.proto:15:16
   |
15 |         option unknown = 42;
   |                ^^^^^^^ because of this field selector

error: cannot find message field `unknown` in `google.protobuf.EnumOptions`
  --> testdata/options/missing.proto:21:12
   |
21 |     option unknown = 42;
   |            ^^^^^^^ because of this field selector

error: expected singular message, found scalar type `bool`
   --> testdata/options/missing.proto:22:23
    |
 22 |     option deprecated.x = 42;
    |            ---------- ^ field selector requires singular message
    |             |
    |             found scalar type `bool`
    |
   ::: <built-in>/google/protobuf/descriptor.proto:865:12
    |
865 |   optional bool deprecated = 3 [default = false];
    |            ---- type specified here

error: cannot find message field `unknown` in `google.protobuf.EnumValueOptions`
  --> testdata/options/missing.proto:23:19
   |
23 |     BAR_ZERO = 0 [unknown = 42, deprecated.x = 42];
   |                   ^^^^^^^ because of this field selector

error: expected singular message, found scalar type `bool`
   --> testdata/options/missing.proto:23:44
    |
 23 |     BAR_ZERO = 0 [unknown = 42, deprecated.x = 42];
    |                                 ---------- ^
    |                                  |         |
    |                                  found scalar type `bool`
    |                                            |
    |                                            field selector requires singular message
    |
   ::: <built-in>/google/protobuf/descriptor.proto:895:12
    |
895 |   optional bool deprecated = 1 [default = false];
    |            ---- type specified here

encountered 12 errors
